# pythonbeid

./: LICENSE  README.md  beid.py  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
pythonbeid/: __init__.py  card_reader.py  exceptions.py  parser.py
tests/: test_card_reader.py
